; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/wireless/extr_reg.c_print_dfs_region.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/wireless/extr_reg.c_print_dfs_region.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c" DFS Master region FCC\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c" DFS Master region ETSI\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c" DFS Master region JP\00", align 1
@.str.3 = private unnamed_addr constant [27 x i8] c" DFS Master region Unknown\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @print_dfs_region to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_dfs_region(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %16

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  switch i32 %7, label %14 [
    i32 129, label %8
    i32 130, label %10
    i32 128, label %12
  ]

8:                                                ; preds = %6
  %9 = call i32 @pr_info(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  br label %16

10:                                               ; preds = %6
  %11 = call i32 @pr_info(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0))
  br label %16

12:                                               ; preds = %6
  %13 = call i32 @pr_info(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0))
  br label %16

14:                                               ; preds = %6
  %15 = call i32 @pr_info(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0))
  br label %16

16:                                               ; preds = %5, %14, %12, %10, %8
  ret void
}

declare dso_local i32 @pr_info(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
